# src/server/swagger/swagger.json
@@ -26,9 +26,6 @@
 		},
 		"SignedOrder": {
 			"properties": {
-				"ecSignature": {
-					"$ref": "#/definitions/ECSignature"
-				},
 				"maker": {
 					"type": "string"
 				},
@@ -64,10 +61,12 @@
 				},
 				"expirationUnixTimestampSec": {
 					"type": "string"
+				},
+				"ecSignature": {
+					"$ref": "#/definitions/ECSignature"
 				}
 			},
 			"required": [
-				"ecSignature",
 				"maker",
 				"taker",
 				"makerFee",
@@ -79,7 +78,8 @@
 				"salt",
 				"exchangeContractAddress",
 				"feeRecipient",
-				"expirationUnixTimestampSec"
+				"expirationUnixTimestampSec",
+				"ecSignature"
 			],
 			"type": "object"
 		},
